--- a/Example/Podfile
+++ b/Example/Podfile
@@ -3,7 +3,7 @@ use_frameworks!
 platform :ios, '10.0'
 
 target 'MySampleLib_Example' do
-  pod 'MySampleLib', :path => '../'
+  pod 'MySampleLib', :path => 'https://github.com/akhil.kj/MySampleLib.git'
 
   target 'MySampleLib_Tests' do
     inherit! :search_paths
